--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,31 @@
   flex-wrap: wrap;
 }
 
+.back-button-div {
+  width: 75vw;
+  margin-top: 5rem;
+}
+
+.back-button {
+  font-family: var(--font-base);
+  font-size: 1rem;
+  font-weight: 300;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 5px;
+
+  padding: 0.5rem 2rem;
+}
+
+.back-button i {
+  padding-right: 0.5rem;
+}
+
+@media screen and (max-width: 950px) {
+  .back-button-div {
+    width: 90vw;
+  }
+}
+
 @media screen and (max-width: 650px) {
   .countries-container {
     flex-direction: column;
