--- a/src/components/CountryDetailedCard/CountryDetailedCard.css
+++ b/src/components/CountryDetailedCard/CountryDetailedCard.css
@@ -1,10 +1,10 @@
 .country-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
 
-  width: 90vw;
-  margin-top: 5rem;
+  width: 75vw;
+  margin-top: 4rem;
 
   font-family: var(--font-base);
 }
@@ -60,9 +60,14 @@
 }
 
 .border-country {
+  font-size: 0.8rem;
+  font-weight: 300;
+
+  padding: 0.25rem 0.5rem;
+
   margin: 0.1rem 0.5rem;
   border-radius: 0.3rem;
-  box-shadow: rgba(59, 59, 59, 0.2) 0px 2px 30px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 @media screen and (max-width: 950px) {
@@ -73,7 +78,7 @@
 
   .country-container img,
   .country-data-wrapper {
-    height: 45vh;
+    height: 30vh;
     width: 60vw;
   }
 
@@ -89,20 +94,24 @@
   }
 }
 
-
 @media screen and (max-width: 650px) {
   .country-container img {
     width: 90vw;
-    height: 30vh;
+    height: 25vh;
   }
 
   .country-data-wrapper {
     width: 90vw;
+    margin-top: 2rem;
   }
 
   .country-data,
   .country-borders {
     flex-direction: column;
+  }
+
+  .border-country {
+    margin: 0.25rem 0.25rem;
   }
 }
 
