--- a/src/App.css
+++ b/src/App.css
@@ -2,48 +2,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
-  background: var(--color-light-gray);
+  min-height: 100vh;
 }
 
-.countries-container {
-  width: 90vw;
-
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-
-  flex-wrap: wrap;
+.bg-light {
+  color: var(--color-very-dark-blue-text);
+  background: var(--color-very-light-gray-bg);
 }
 
-.back-button-div {
-  width: 75vw;
-  margin-top: 5rem;
+.bg-dark {
+  color: var(--color-white);
+  background: var(--color-very-dark-blue-bg);
 }
 
-.back-button {
-  font-family: var(--font-base);
-  font-size: 1rem;
-  font-weight: 300;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 5px;
-
-  padding: 0.5rem 2rem;
+.element-light {
+  color: var(--color-very-dark-blue-text);
+  background: var(--color-white);
 }
 
-.back-button i {
-  padding-right: 0.5rem;
-}
-
-@media screen and (max-width: 950px) {
-  .back-button-div {
-    width: 90vw;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .countries-container {
-    flex-direction: column;
-  }
+.element-dark {
+  color: var(--color-white);
+  background: var(--color-dark-blue-elements);
 }
