--- a/src/components/CountryCard/CountryCard.css
+++ b/src/components/CountryCard/CountryCard.css
@@ -1,9 +1,19 @@
+.countries-container {
+  width: 90vw;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  flex-wrap: wrap;
+}
+
 .country-wrapper {
-  width: 16vw;
-  height: 40vh;
+  width: 14vw;
+  height: 36vh;
 
   border-radius: 0.3rem;
-  box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 
   display: flex;
   flex-direction: column;
@@ -14,7 +24,6 @@
 
 .country-wrapper img {
   border-radius: 0.3rem 0.3rem 0 0;
-  border-bottom: 1px solid rgba(149, 157, 165, 0.15);
   width: 100%;
   height: 50%;
 }
@@ -28,17 +37,22 @@
   
   margin-top: 1rem;
 }
+
 .country-info {
   padding-bottom: 1rem;
 }
 
 .country-info h4 {
   font-family: var(--font-base);
-  font-size: 0.95rem;
-  font-weight: 300;
+  font-size: 0.85rem;
+  font-weight: 600;
   letter-spacing: 0.01rem;
 
   padding: 0.1rem 1rem;
+}
+
+.country-info span {
+  font-weight: 300;
 }
 
 @media screen and (max-width: 1150px) {
@@ -56,6 +70,10 @@
 }
 
 @media screen and (max-width: 650px) {
+  .countries-container {
+    flex-direction: column;
+  }
+
   .country-wrapper {
     width: 80vw;
     height: fit-content;
