--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,8 +2,20 @@
   width: 100%;
   font-family: var(--font-base);
   font-weight: 800;
-  color: var(--color-very-dark-blue);
-  background: var(--color-white);
 
-  padding: 1rem 3rem;
+  padding: 0.4rem 3rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-title,
+.header-container i {
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+
+.header-container button {
+  border: none;
 }
